att entidades e gerenciamento de pacientes